--- a/static/templates/orderlist.html
+++ b/static/templates/orderlist.html
@@ -15,9 +15,7 @@
                 <tr>
                     
                     {%- for item in data -%}
-
                     {% set var = item[4] %}
-
 
                     <tr>
                         <td>{{item[0]}}</td>
@@ -31,9 +29,10 @@
                             <td style="background-color:red;"></td>
                         {% endif %}
                         <td>
-                            <button type="submit" name='delete_button' value="{{item[0]}}"> delete order {{item[0]}} </button>
-                            <br>
-                            <button type="submit" name="status_button" value="{{item[0]}}"> change status {{item[0]}} </button>
+                            <form method="POST">
+                                <button type="submit" name='delete_button' value="{{item[0]}}"> delete order {{item[0]}} </button>
+                                <button type="submit" name="status_button" value="{{item[0]}}"> change status {{item[0]}} </button>
+                            </form>
                         </td>
                     </tr>
                     <br>
@@ -42,10 +41,12 @@
             </tbody>
         </table>
         <br>
+        
         <form method="POST">
-            <input type="text" id="new_entry_description" name="new_entry_description" required=required>
-            <input type="url" id="new_entry_trackingLink" name="new_entry_trackingLink" required=required>
-            <button type="submit" name="add_new_entry_button">submit</button>
+            <label>Add new order:</label>
+            <input type="text" id="new_entry_description" name="new_entry_description" placeholder="description" required=required>
+            <input type="url" id="new_entry_trackingLink" name="new_entry_trackingLink" placeholder="trackingURL" required=required>
+            <button type="submit" name="add_new_entry_button">+</button>
         </form>
         
     </body>
