finalized delete option

--- a/static/templates/orderlist.html
+++ b/static/templates/orderlist.html
@@ -20,7 +20,7 @@
                     <tr>
                         <td>{{item[0]}}</td>
                         <td>{{item[1]}}</td>
-                        <td>{{item[2]}}</td>
+                        <td><a href="{{item[2]}}">{{item[2]}}</a></td>
                         <td><img src="{{item[3]}}"></td>
                         <!--<td style={$ if {{item[4]}} = 0 $} "background-color:red;" {$ else $} "background-color:green;" {$ endif $}>{{item[4]}}</td>-->
                         {% if var %}
